--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-python-telegram-bot==13.7
-requests==2.26.0
+python-telegram-bot==20.7
+requests==2.31.0
+python-dotenv==1.0.0
+beautifulsoup4==4.12.2
+urllib3==1.26.16
